test/loop/confidence/errors/func_call_errors_2.loop
# Errors in pattern matching functions

func() ->
  x.call(1 z)

